[metadata]
name = html2text
version = attr: html2text.__version__
description = Turn HTML into equivalent Markdown-structured text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Alir3z4/html2text/
author = Aaron Swartz
author_email = me@aaronsw.com
maintainer = Alireza Savand
maintainer_email = alireza.savand@gmail.com
license = GNU GPL 3
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
platform = OS Independent

[options]
zip_safe = False
packages = html2text
python_requires = >=3.7

[options.entry_points]
console_scripts =
    html2text = html2text.cli:main

[options.package_data]
html2text = py.typed

[flake8]
max_line_length = 88
extend-ignore = E203

[isort]
combine_as_imports = True
profile = black

[mypy]
python_version = 3.7
